2021-05-30:
  - Added support for vertical-bar syntax for responses of conditional
    logit models.

2021-05-27:
  - Added support for non-nested random effects.

2021-05-25:
  - Fixed serious bug in the handling of multilevel random effects models.
  - Detect some misspecified models with too many groups.

2021-04-17:
  - Merged pull request by Russel V. Lenth that adds support for "emmeans".

2021-04-04:
  - Apply patch suggested by Ilya Yalchyk to improve formula argument
    of 'mclogit()' and 'mblogit()'.

2021-03-19:
  - Last fixes for CRAN

2021-03-18:
  - Improved support 'mtable()' for multinomial logit models with random effects.

2021-02-21:
  - Fixed predictions from models with scaled independent variables etc.
  - 'summary()' now reports the number of groups per random effects level.      

2021-01-28:
  - Another prediction fix. Do not refer to weights that are not needed.

2021-01-10:
  - Fixed prediction method also for mmclogit objects

2020-12-23:
  - Refactored computations
  - Fixed predictions from random-effects models where group indices are not 
    a sequence of integers starting at 1.

2020-11-03:
  - Correct URLs in DESCRIPTION

2020-09-09:
  - Fix reference to weights in 'predict()' methods

2020-08-06:
  - Let 'mclogit'/'mblogit' handle empty responses (i.e. where counts sum to
    zero) correclty.
  - Make 'mclogit' complain about non-numeric responses  

2020-07-17:
  - Documented prediction methods.
  - Improved flexibility of prediction methods. 

2020-07-16:
  - Implemented reasonable 'predict' method for mmblogit and mmclogit objects.

2020-07-15:
  - Bugfix: Make 'update' work with missing 'dispersion=' argument.
  - Bugfix: Make 'vcov' work for objects without 'phi' component.
  - Add 'vcov' method for 'mmclogit' objects.

2020-06-27:
  - Documented 'simulate()' methods.

2020-06-11:
  - Implemented (approximate) REML estimator.

2020-06-07:
  - Added a 'simulate()' method for "mblogit" and "mclogit" models.

2020-05-24: