@@ -1,3 +1,6 @@
+2021-06-03:
+  - Be less zealous about group-level covariates constant in some choice sets.
+
 2021-05-30:
   - Added support for vertical-bar syntax for responses of conditional
     logit models.
